--- a/style2.css
+++ b/style2.css
@@ -10,7 +10,7 @@
 
 body {
   font-size: 16px;
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   max-width: 100%;
   overflow-x: hidden;
 }
@@ -22,7 +22,7 @@ section {
 .btn {
   color: white;
   border: 2px solid white;
-  padding: .7rem 1.2rem;
+  padding: 0.7rem 1.2rem;
   text-decoration: none;
   background-color: transparent;
   font-weight: 700;
@@ -33,7 +33,8 @@ section {
   background-color: white;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-family: "DM Serif Display", serif;
 }
 
@@ -57,6 +58,7 @@ h1, h2 {
           align-items: center;
   padding: 0 10%;
   z-index: 300;
+  visibility: hidden;
 }
 
 .nav .burger {
@@ -83,7 +85,7 @@ h1, h2 {
 }
 
 .nav .nav-list .nav-item {
-  padding: 0 .5rem;
+  padding: 0 0.5rem;
 }
 
 .nav .nav-list .nav-item:last-child {
@@ -91,7 +93,7 @@ h1, h2 {
 }
 
 .nav .nav-list .nav-item a {
-  padding: .7rem 1.2rem;
+  padding: 0.7rem 1.2rem;
   text-decoration: none;
   font-weight: 700;
   color: #837d87;
@@ -164,11 +166,17 @@ h1, h2 {
   font-size: 4rem;
   padding-top: 10%;
   padding-bottom: 5%;
+  visibility: hidden;
 }
 
 .main-section .main-container .main-text p {
   color: white;
   padding-bottom: 5%;
+  visibility: hidden;
+}
+
+.main-section .main-container .main-text .btn {
+  visibility: hidden;
 }
 
 .main-section .main-container .main-text img {
@@ -196,6 +204,7 @@ h1, h2 {
   left: 0%;
   z-index: 100;
   width: 100%;
+  visibility: hidden;
 }
 
 .main-section .main-container .main-image .pattern-right-desktop {
@@ -385,7 +394,7 @@ footer .footer-container .footer-wrapper-top {
 }
 
 footer .footer-container .footer-wrapper-top .socials-wrapper a svg {
-  margin: 0 .2rem;
+  margin: 0 0.2rem;
 }
 
 footer .footer-container .footer-wrapper-top .socials-wrapper a svg:hover path {
@@ -424,7 +433,7 @@ footer .footer-container .footer-wrapper-bottom .footer-wrapper-bottom-content {
 }
 
 footer .footer-container .footer-wrapper-bottom .footer-wrapper-bottom-content h1 {
-  font-family: 'Karla', sans-serif;
+  font-family: "Karla", sans-serif;
   color: #837d87;
   text-transform: uppercase;
   font-size: 1rem;
@@ -436,7 +445,7 @@ footer .footer-container .footer-wrapper-bottom .footer-wrapper-bottom-content u
 }
 
 footer .footer-container .footer-wrapper-bottom .footer-wrapper-bottom-content ul li {
-  padding: .4rem 0;
+  padding: 0.4rem 0;
 }
 
 footer .footer-container .footer-wrapper-bottom .footer-wrapper-bottom-content ul li a {
@@ -460,7 +469,8 @@ footer .footer-container .footer-wrapper-bottom .footer-wrapper-bottom-content u
           transform: translateX(0%) !important;
 }
 
-html, body {
+html,
+body {
   width: 100%;
   overflow-x: hidden;
 }
@@ -508,14 +518,14 @@ html, body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding-top: .5rem;
-    padding-bottom: .5rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
   .nav .nav-list .nav-item:hover {
     background-color: #95a9c6;
   }
   .nav .nav-list .nav-item:last-child {
-    padding-right: .5rem;
+    padding-right: 0.5rem;
   }
   .nav .nav-list .nav-item a {
     height: 100%;
@@ -579,11 +589,11 @@ html, body {
     font-size: 2.4rem;
   }
   .main-section .main-container .main-text p {
-    font-size: .9rem;
+    font-size: 0.9rem;
     padding-bottom: 2rem;
   }
   .main-section .main-container .main-text .btn {
-    padding: .7rem 1.5rem;
+    padding: 0.7rem 1.5rem;
   }
   .main-section .main-container .main-text .bg-pattern-intro-left-mobile {
     display: block;
@@ -762,7 +772,7 @@ html, body {
     font-size: 3rem;
   }
   .main-section .main-container .main-text p {
-    font-size: .9rem;
+    font-size: 0.9rem;
   }
   .main-section .main-container .main-image .image-intro-desktop {
     height: 100%;
@@ -793,7 +803,7 @@ html, body {
     font-size: 2.5rem;
   }
   .main-section .main-container .main-text p {
-    font-size: .8rem;
+    font-size: 0.8rem;
   }
   .how-we-work-section {
     height: 90vh;
