--- a/style2.css
+++ b/style2.css
@@ -727,6 +727,57 @@ body {
   }
 }
 
+/* LANDSCAPE ORIENTATION */
+@media (max-height: 450px) {
+  body {
+    font-size: 11px;
+  }
+  section {
+    padding: 0 5%;
+  }
+  .nav {
+    height: 20vh;
+    padding: 0 5%;
+  }
+  .nav .nav-list .nav-item a {
+    padding: 0.7rem 0.7rem;
+  }
+  .main-section {
+    height: 150vh;
+  }
+  .main-section .main-container {
+    padding: 0 5%;
+  }
+  .main-section .main-container .main-text h1 {
+    font-size: 2.5rem;
+  }
+  .main-section .main-container .main-text img {
+    -webkit-transform: scale(0.8);
+            transform: scale(0.8);
+  }
+  .main-section .main-container .main-image .pattern-right-desktop {
+    display: none;
+  }
+  .how-we-work-section {
+    height: 200vh;
+  }
+  .how-we-work-section .how-we-work-container h1 {
+    font-size: 2.5rem;
+  }
+  .how-we-work-section .how-we-work-container .how-we-work-wrapper-bottom .how-we-work-bottom-text h1 {
+    font-size: 2rem;
+  }
+  footer {
+    height: 90vh;
+  }
+  footer .footer-container .footer-wrapper-top {
+    padding: 0 5%;
+  }
+  footer .footer-container .footer-wrapper-bottom {
+    padding: 0 5%;
+  }
+}
+
 @media (max-width: 450px) and (min-height: 750px) {
   .main-section {
     height: 120vh;
@@ -791,7 +842,7 @@ body {
 }
 
 /* IPAD SECTION */
-@media (max-width: 768px) and (min-width: 500px) {
+@media (max-width: 768px) and (min-width: 500px) and (min-height: 460px) {
   section {
     padding: 0 5%;
   }
