--- a/style2.scss
+++ b/style2.scss
@@ -632,6 +632,85 @@ body {
   }
 }
 
+/* LANDSCAPE ORIENTATION */
+@media (max-height: 450px) {
+  body {
+    font-size: 11px;
+  }
+
+  section {
+    padding: 0 5%;
+  }
+
+  .nav {
+    height: 20vh;
+    padding: 0 5%;
+
+    .nav-list {
+      .nav-item {
+        a {
+          padding: 0.7rem 0.7rem;
+        }
+      }
+    }
+  }
+
+  .main-section {
+    height: 150vh;
+
+    .main-container {
+      padding: 0 5%;
+
+      .main-text {
+        h1 {
+          font-size: 2.5rem;
+        }
+
+        img {
+          transform: scale(0.8);
+        }
+      }
+
+      .main-image {
+        .pattern-right-desktop {
+          display: none;
+        }
+      }
+    }
+  }
+
+  .how-we-work-section {
+    height: 200vh;
+    .how-we-work-container {
+      h1 {
+        font-size: 2.5rem;
+      }
+
+      .how-we-work-wrapper-bottom {
+        .how-we-work-bottom-text {
+          h1 {
+            font-size: 2rem;
+          }
+        }
+      }
+    }
+  }
+
+  footer {
+    height: 90vh;
+
+    .footer-container {
+      .footer-wrapper-top {
+        padding: 0 5%;
+      }
+
+      .footer-wrapper-bottom {
+        padding: 0 5%;
+      }
+    }
+  }
+}
+
 @media (max-width: 450px) and (min-height: 750px) {
   .main-section {
     height: 120vh;
@@ -727,7 +806,7 @@ body {
 }
 
 /* IPAD SECTION */
-@media (max-width: 768px) and (min-width: 500px) {
+@media (max-width: 768px) and (min-width: 500px) and (min-height: 460px) {
   section {
     padding: 0 5%;
   }
